	order to prevent Twitter from confusing a username consisting of
	digits with a user id. Thanks to Makoto Fujiwara who reported this
	problem.
	(twittering-call-api): fix the API call for `user_timeline'. The
	new implementation gives a username as a query parameter. This
	prevents Twitter from confusing a username consisting of digits
	with a user id.

2011-07-20  Tadashi MATSUO  <tad@mymail.twin.jp>

	* twittering-mode.el: Fix indentation of the function
	`twittering-verify-credentials'.
	(twittering-verify-credentials): fix indentation.

	* twittering-mode.el: Display exit status of the process for
	authorization if it exited abnormally.
	(twittering-http-get-verify-credentials-clean-up-sentinel):
	display exit status of the process if it exited abnormally.

	* twittering-mode.el: Embed another root CA certificate to follow
	an update of the server. Now, the server certificate for
	`api.twitter.com' is updated and it cannot be verified by the
	already embedded certificate `Equifax Secure Certificate
	Authority'. So, a root CA certificate `VeriSign Class 3 Public
	Primary CA - G2' is also embedded, which is used for verifying the
	server `api.twitter.com'.
	(twittering-cert-file): removed.
	(twittering-delete-ca-cert-file): removed.
	(twittering-cert-directory): new variable.
	(twittering-delete-ca-cert): new function.
	(twittering-ensure-ca-cert): prepare a directory including
	multiple CA certificates instead of a single file. Now this
	function generates "VeriSign Class 3 Public Primary CA - G2".
	(twittering-make-connection-info): replace the parameter
	`cacert-fullpath' with `cacert-directory-fullpath'.
	(twittering-send-http-request-native): remove redundant bindings.
	(twittering-send-http-request-curl): follow the modification of
	the parameter generated by `twittering-make-connection-info'.
	(twittering-send-http-request-wget): likewise.
	* cert/equifax.pem: removed. This certificate had not been used.